--- a/example/01-hello/a/index.html
+++ b/example/01-hello/a/index.html
@@ -2,12 +2,48 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>視窗程式設計</title>
   </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+  <body style="background :#89CF17">    
+  <div id="sitebody">
+    <div id="contest">
+    <table border="1">
+      <caption>基本資訊</caption>
+      <tr>
+        <td><span style="color: #7F22D6">上課時間:</span></td>
+        <td>每個禮拜三13:30~16:30</td>
+      </tr>
+      <tr>
+          <td><span style="color: #7F22D6">上課教師:</span></td>
+          <td><a href="https://github.com/cccnqu/ccc/wiki">陳鍾誠</a></td>
+      </tr>
+      <tr>
+            <td><span style="color: #7F22D6">上課地點:</span></td>
+            <td>E321</td>
+      </tr>
+      <tr>
+              <td><span style="color: #7F22D6">上課教材:</span></td>
+              <td><a href="https://github.com/cccnqu/wp106a/wiki">wiki</a></td>
+      </tr>
+      <tr>
+                <td rowspan="2"><span style="color: #7F22D6">上課先備:</span></td>
+                <td rowspan="2">擁有一個github帳號<p>會使用github and git</p></td>
+                
+                
+      </tr>
+      <tr></tr>
+      <tr>
+        <td><span style="color: #7F22D6">參考資料</span></td>
+        <<td rowspan="4"><a href="https://en.wikipedia.org/wiki/Electron_(software_framework)">維基</a>
+        <a href="https://electron.atom.io/">electron</a></p>
+        <a href="https://github.com/electron/electron">git electron</a></p>
+        <a href="https://electron.atom.io/community">社群</a></p>
+        </td>
+      </tr>
+    </div>
   </body>
 </html>
+
+<!--We are using node <script>document.write(process.versions.node)</script>,
+Chrome <script>document.write(process.versions.chrome)</script>,
+and Electron <script>document.write(process.versions.electron)</script>.-->
